Fixed particle animation layout issue

--- a/style.css
+++ b/style.css
@@ -269,6 +269,8 @@ main {
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Moves it behind everything */
     background: #0a0a0a;
 }
